--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "32"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "-32"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "20"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "-42"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "42"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "1.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "2.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "20.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "0.000123"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "0j"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "(1+0j)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "(-1.1-1.2j)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "-1j"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "(-3+0j)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "15.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "5.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "4.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "9"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "10.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "4"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "4"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "3.556"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "8"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,6 +900,69 @@
    "source": [
     "# 等同于 2**3\n",
     "pow(2, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 排序\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "排序并返回一个新的已排序对象\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 8, 5, 2, 1]"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted([5, 2, 8, 1, 9], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对原对象进行排序\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 8, 5, 2, 1]"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw = [5, 2, 8, 1, 9]\n",
+    "raw.sort(reverse=True)\n",
+    "raw"
    ]
   },
   {
@@ -918,16 +981,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "3"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,16 +1010,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "3"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,16 +1038,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4291940217022573"
+       "0.6476681711616211"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,16 +1059,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.220154937186419"
+       "8.348556141145913"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,25 +1087,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[8, 1, 5, 3]"
+       "[8, 5, 1, 3]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 随机对一个序列排序\n",
-    "list = [1, 3, 5, 8]\n",
-    "random.shuffle(list)\n",
-    "list"
+    "raw = [1, 3, 5, 8]\n",
+    "random.shuffle(raw)\n",
+    "raw"
    ]
   },
   {
@@ -1054,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1126,7 @@
        "(-0.3000000000000007, -10.0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
